--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ org.gradle.jvmargs=-Xmx1536m
 
 # To re-enable the build cache, either delete the following
 # line or set the property to 'true'.
-android.enableBuildCache=false
+# android.enableBuildCache=false
