Migration AndroidX, Attribute als final markiert

--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
         // replaces jcenter() and google()
         maven { url "http://dv-git01.dv.ba-dresden.local:8081/artifactory/libs/" }
         maven { url "http://dv-git01.dv.ba-dresden.local:8081/artifactory/dev/" }
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:4.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +23,7 @@ allprojects {
         maven { url "http://dv-git01.dv.ba-dresden.local:8081/artifactory/dev/" }
 
         buildDir "${System.env.TEMP}/${rootProject.name}/${project.name}"
+        google()
     }
 }
 
